--- a/portfolio_base.css
+++ b/portfolio_base.css
@@ -7,3 +7,45 @@ Date: Feb 01, 2023
 Description: WEBD1000-ePortfolio
 */
 
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body > header {
+  background-color: #346d7a;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+body >nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+body >nav li {
+  margin-right: 20px;
+}
+
+body >nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+body >nav a:hover {
+  text-decoration: underline;
+}
+
+
+body >footer {
+background-color: #60696d;
+color: white;
+padding: 10px;
+text-align: center;
+}
