--- a/portfolio_base.css
+++ b/portfolio_base.css
@@ -1,47 +1,44 @@
-
-@charset "UTF-8";
-
-/* 
-Author: Chunran Kang
-Date: Feb 01, 2023
-Description: WEBD1000-ePortfolio
-*/
-
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-body > header {
-  background-color: #346d7a;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-}
-
-body >nav ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-body >nav li {
-  margin-right: 20px;
-}
-
-
-body >nav a:hover {
-  text-decoration: underline;
-}
-
-
-body >footer {
-background-color: #60696d;
-color: white;
-padding: 10px;
-text-align: center;
+nav {
+    background-color: #333; 
+    display: flex; 
+    justify-content: space-between; 
+    padding: 10px; 
+  }
+  
+  nav ul {
+    display: flex; 
+    list-style-type: none;
+    margin: 0; 
+    padding: 0; 
+  }
+  
+  nav li {
+    margin: 0 10px; 
+  }
+  
+  nav a {
+    color: #fff; 
+    text-decoration: none; 
+    padding: 10px; 
+  }
+  
+  nav a:hover {
+    background-color: #555;
+  }
+  @media only screen and (max-width: 640px) {
+    nav {
+      flex-direction: column; 
+      align-items: center; 
+    }
+  
+    nav ul {
+      display: flex; 
+      flex-direction: column; 
+      align-items: center;
+      margin-top: 10px; 
+    }
+  
+    nav li {
+      margin: 10px 0; 
+    }
 }
