--- a/portfolio_base.css
+++ b/portfolio_base.css
@@ -54,5 +54,13 @@ nav {
       text-align: center;
       padding: 20px;
     }
+
+    img {
+        width: 100%;
+        height: auto;
+    }
+
+  
+  
     
 }
