--- a/contact_style.css
+++ b/contact_style.css
@@ -1,4 +1,7 @@
-/* Styles for the header and navigation */
+
+h1{
+  text-align: center;
+}
 
   nav ul {
     margin: 0;
@@ -18,8 +21,7 @@
   nav a:hover {
     color: #ccc;
   }
-  
-  /* Styles for the main content */
+
   .container {
     max-width: 800px;
     margin: 0 auto;
@@ -43,7 +45,6 @@
     text-align: center;
   }
   
-  /* Styles for the form */
   form label {
     display: block;
     margin-bottom: 5px;
