--- a/goals_style.css
+++ b/goals_style.css
@@ -1,4 +1,3 @@
-/* general styles */
 
 body {
     font-family: Arial, sans-serif;
@@ -17,22 +16,26 @@ body {
   }
   
   nav li {
-    margin: 0 10px;
+    margin: 0 1em;
+    
   }
   
   nav a {
     color: #fff;
     text-decoration: none;
+    transition: color 0.3s ease-in-out;
   }
   
   nav a:hover {
+    color: #ffc107;
     text-decoration: underline;
   }
   
   /* main styles */
-  
   main {
-    margin: 50px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 2em;
   }
   
   h1 {
@@ -43,18 +46,20 @@ body {
   }
   
   h2 {
-    font-size: 2rem;
-    color: #0bd47a;
+    color: #0077c0;
+    margin-top: 2em;
+    text-align: center;
   }
-  
   ol {
-    margin-left: 30px;
+    list-style: none;
+    counter-reset: goal-counter;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
-  
-  li {
-    margin-bottom: 10px;
-  }
-  
+
   /* responsive styles for mobile devices */
   
   @media (max-width: 640px) {
