--- a/portfolio_base.css
+++ b/portfolio_base.css
@@ -1,66 +1,42 @@
-nav {
-    background-color: #32579b; 
-    display: flex; 
-    justify-content: space-between; 
-    padding: 10px; 
-  }
-  
-  nav ul {
-    display: flex; 
-    list-style-type: none;
-    margin: 0; 
-    padding: 0; 
-  }
-  
-  nav li {
-    margin: 0 10px; 
-  }
-  
-  nav a {
-    color: #fff; 
-    text-decoration: none; 
-    padding: 10px; 
-  }
-  
-  nav a:hover {
-    background-color: #555;
-  }
-  footer {
-    background-color: #076b82;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-  }
-  
-  @media only screen and (max-width: 640px) {
-    nav {
-      flex-direction: column; 
-      align-items: center; 
-    }
-  
-    nav ul {
-      display: flex; 
-      flex-direction: column; 
-      align-items: center;
-      margin-top: 10px; 
-    }
-  
-    nav li {
-      margin: 10px 0; 
-    }
-    footer {
-      background-color: #510606;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
+/* Style the navigation menu */
 
-    img {
-        width: 100%;
-        height: auto;
-    }
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
 
-  
-  
-    
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #04AA6D;
+  color: white;
 }
